--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>google-homepage</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="/style/index.css" rel="stylesheet">
+      <link href="D:\project A-Z\the_odin_project\google-homepage\style\index.css" type="text/css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
